Add favourites to storage